# docassemble-HousingCodeChecklist

./: .gitignore  LICENSE  MANIFEST.in  README.md  pull_request_template.md  pyproject.toml  setup.py
.github/workflows/: da_build.yml  github_server.yml  run_form_tests.yml  run_unit_tests.yml  valid_jinja2.yml  word_diff.yml
docassemble/HousingCodeChecklist/: __init__.py  discovery.py  language.py  load_data.py
docassemble/HousingCodeChecklist/data/questions/: Housing_Code_Checklist.yml  Repair_Demand_Letter_standalone.yml  Repair_Demand_Letter_to_include.yml  Repair_Letter_Tenant.yml  Repair_Letter_Tenant_standalone.yml  autoterms.yml  contempt_complaint_standalone.yml  customized_screens.yml  discovery.yml  discovery_rules.yml  feedback.yml  housing_code_interview.yml  language.yml  load_answers.yml  orders_and_contempt_complaint.yml  simple_conditions.yml  test_dataloader.yml  verified_complaint_and_motions_standalone.yml  verified_complaint_and_motions_to_include.yml
docassemble/HousingCodeChecklist/data/sources/: UpToCode Inspectors.xlsx  affidavit_of_indigency_es.xlsx  discovery_rules.yml  document_requests.yml  housing_code_checklist.xlsx  housing_code_interview_es.xlsx  housing_code_interview_ht.xlsx  housing_code_interview_pt.xlsx  housing_code_test.feature  housing_inspectors.xlsx  interrogatories.yml  interviews_run.feature  maximalist_path.feature
docassemble/HousingCodeChecklist/data/static/: back_button.js  bootstrap.min.css  favicon.js  styles.css  uptocode.bootstrap.css
docassemble/HousingCodeChecklist/data/templates/: Evidence_packet.docx  (+31 more)
